Help pages and mention Supporters in About

--- a/SailScores.Web/Pages/Help/FAQ.cshtml
+++ b/SailScores.Web/Pages/Help/FAQ.cshtml
@@ -307,7 +307,7 @@
                 <p>
                     For small fleets, the buttons at the bottom of the race page are usually the
                     quickest way to add results. But as the fleet size grows, it can be faster
-                    to dismiss the button panel and enter partial sail numbers into the score
+                    to dismiss the button panel and type partial sail numbers into the score
                     entry text box. If multiple competitors match your entry, tap or click
                     on the correct choice in the auto-complete list. Press enter to
                     start entering the next boat.
@@ -317,7 +317,7 @@
                     if you enter results on the day of racing.
                 </p>
                 <p>
-                    If you have Supporter features enabled, two other methods of entering results
+                    If you have Supporter features enabled, two other fast methods of entering results
                     are available: click on the camera icon to use a picture of sail numbers to
                     enter results; or find the microphone icon to use voice input for sail numbers.
                     When using voice recognition, say a sail number or sailor name as it appears
@@ -333,7 +333,7 @@
                 <p>
                     Regattas can have multiple Fleets which will race and be scored independently.
                     After creating the regatta, use the regatta page to create and edit fleets.
-                    A separate section of the page will be dedicated to each fleet and the
+                    A separate section of the regatta page will be dedicated to each fleet and the
                     competitors tab will have a button to edit the fleet.
                 </p>
                 <p>
