--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -43,7 +43,7 @@
                         </a>
                         <textarea asp-for="Description" class="form-control" cols="60" rows="6"></textarea>
                         <span asp-validation-for="Description" class="text-danger"></span>
-                        <small class="form-text text-muted">Public description shown on front page and club home page</small>
+                        <small class="form-text text-muted">Public description shown on both the front page and club home page</small>
                     </div>
 
                     <div class="mb-3">
