--- a/SailScores.Web/Views/ClubRequest/List.cshtml
+++ b/SailScores.Web/Views/ClubRequest/List.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "List";
 }
 
-<h1 id="clubRequestTitle">Requests for Club Creation</h1>
+<h1 id="clubRequestTitle" class="h2">Requests for Club Creation</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
