--- a/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
@@ -14,7 +14,7 @@
     var clubUrl = $"{baseUrl}/{Model.ClubInitials.ToUpperInvariant() + ((Model.ForTesting ?? false) ? "TEST" : "")}";
 }
 
-<h1>Club Created</h1>
+<h1 class="h2">Club Created</h1>
 
 <h4>
     <a href="@clubUrl">
