--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -5,48 +5,57 @@
 }
 <div class="row">
 <div class="col col-lg-8">
-    <h1 class="h2">Sailing scoring kept simple.</h1>
+    <h1 class="h2">Sailing scoring kept simple</h1>
     <p>
         SailScores makes publishing sail race results simple and
         fast: simple enough that the scores can be entered and shared
-        from a phone on the water. Competitors and clubs can view scores
+        from a phone on the water. Competitors and clubs can view results
         in many ways from many devices, with trends and specifics.
     </p>
     <br />
-    <h3>It's free</h3>
+    <h3>Free for Clubs</h3>
     <p>
-        You can host your club's scores on this site. Fill out
+        You can host your club's scores on this site at no cost. Just fill out
         <a asp-controller="ClubRequest" asp-action="index">the form</a>
-        for the initial club setup.
-    </p>
-    <p>
-        SailScores is open-source software. The code is available at
-        <a href="https://github.com/SailScores/SailScores">https://github.com/SailScores/SailScores</a>.
-        You are welcome to run your own instance of this. (Not for the faint of heart...) We'll provide
-        support as time allows.
+        to setup your club and start publishing results.
     </p>
     <br />
-    <h4>What's the catch?</h4>
+    <h4>Open Source</h4>
     <p>
-        <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
+        SailScores is open‑source software. The code is available at
+        <a href="https://github.com/SailScores/SailScores" target="_blank">github.com/SailScores/SailScores</a>.
+        You are welcome to run your own instance (not for the faint of heart). We provide support as time allows.
+    </p>
+    <br />
+    <h4>Why is SailScores Free?</h4>
+    <p>
+        Hosting costs are modest, and development time is donated to
+        support the sailing community, reduce scoring headaches, and
+        explore new technologies. Many clubs operate on tight budgets,
+        and SailScores was created with them in mind.
     </p>
     <p>
-        The expense to host this site is less than $50 a month.
-        Development time is a more significant contribution but is happily donated:
-        score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
+        To help sustain and provide more robust hosting, we offer an
+        optional Supporter program. Supporters contribute financially
+        to keep SailScores fast, reliable, and improving for everyone.
     </p>
     <p>
-        Should storage or other service fees (such as speech
-        recognition) become larger costs, we may need to pass some of
-        them on to users of the "Premium" features. But we are committed
-        to always providing a free option. Our clubs haven't had
-        large budgets and would have benefited from SailScores. We'd like to share.
+        SailScores is committed to always offering a free option for clubs of all sizes.
     </p>
     <p>
-        SailScores doesn't share any tracking or cookies with third-parties. Your
+        To learn more about Supporter benefits, visit the
+        <a href="/pricing">Pricing</a> page.
+    </p>
+
+    <br />
+    <h4>Privacy</h4>
+    <p>
+        SailScores doesn't share tracking or cookies with third-parties. Your
         data is not being sold by SailScores. See our thorough
-        <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
+        <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for full
+        details.
     </p>
+
     <br />
     <h3>Future</h3>
     We're working on new features, including:
@@ -58,15 +67,11 @@
         <li>Support for team racing?</li>
         <li>Support for offline score entry.</li>
     </ul>
-    <p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
-    <br />
-    <h3>Feedback</h3>
-    <p>
-        <em>Please send feedback!</em> Use the email addresses below.
-    </p>
+    <p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues"
+    target="_blank">GitHub</a></p>
 
     <br />
-    <h3>Contact Info</h3>
+    <h3>Contact</h3>
     SailScores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
     <address>
         <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
