--- a/SailScores.Web/Pages/_ViewImports.cshtml
+++ b/SailScores.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, SailScores.Web
 @namespace SailScores.Web.Pages
 @using SailScores.Web
