--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["MetaDescription"] = "Request the creation of a new club hosted at SailScores";
 }
 
-<h1>Give it a try. It's free.</h1>
+<h1 class="h2">Give it a try. It's free.</h1>
 
 <h4>Interested in easy race results?</h4>
 <hr />
