--- a/SailScores.Web/Views/ClubRequest/RequestClub.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestClub.cshtml
@@ -5,7 +5,7 @@
     ViewData["MetaDescription"] = "Request the creation of a new club hosted at SailScores";
 }
 
-<h1>Set up your club's scoring</h1>
+<h1 class="h2">Set up your club's scoring</h1>
 <hr />
 <div class="row">
     <div class="col-12">
