--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -3,7 +3,7 @@
     ViewData["MetaDescription"] = "Latest news about SailScores";
 }
 <div class="col-lg-8">
-    <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
+    <h1 class="h2">News</h1>
 
     <div id="mc_embed_shell">
         <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
