--- a/SailScores.Web/Pages/Help/GettingStarted.cshtml
+++ b/SailScores.Web/Pages/Help/GettingStarted.cshtml
@@ -122,7 +122,7 @@
           SailScores Home Page. This page is worth bookmarking. It is the starting point for
           scorekeepers and result viewers. Feel free to share links to other pages, the links
           should be stable and work for a long time. But if you need one link to share, it will be
-          to the SailScores Club Home Page. This link usually ends with your club's initials, and
+          to the SailScores Club Home Page. This link address ends with your club's initials, and
           will be the start of other links for your club's results.
         </p>
 
@@ -151,7 +151,7 @@
 
         <h4 class="mt-3">Confirm General Club settings</h4>
         <p>
-          Open the Club Admin page and then click on "Edit Club Info". Verify the club name,
+          Open the Club Admin page and then click on <strong>Edit Club Info</strong>. Verify the club name,
           club URL, and location details. Enter latitude and longitude so that SailScores
           can get the current conditions for your races.
         </p>
@@ -225,7 +225,8 @@
         <h4 class="mt-3">Series setup</h4>
         <p>
           Create Series (weekly league, summer series, regatta series). For now, leave the
-          Series Type set to "Standard". "Summary Series" can automatically roll-up other
+          Series Type set to <strong>Standard</strong>. <strong>Summary Series</strong>
+          can automatically roll-up other
           series results into a aggregated score. But you'll need to have Standard Series
           before you can use those.
         </p>
@@ -238,7 +239,9 @@
             Figure: Configure a series and its scoring options.
           </figcaption>
         </figure>
-        <p>Under "Additional Settings" there are a few options for series, but
+        <p>
+          Under <strong>Additional Settings</strong> there are a few
+          options for series, but
           you can keep the defaults if you want to get up and going quickly. 
           <dl>
             <dt>
@@ -293,7 +296,8 @@
 
         <h4 class="mt-3">Competitor setup</h4>
         <p>
-          There are a few ways to get to competitor page. Once there, use the "Create"
+          There are a few ways to get to competitor page. Once there, use the
+          <strong>Create</strong>
           button to open a page that allows the creation of many competitors at once.
           You can paste columns from a spreadsheet into this page if you maintain these
           lists elsewhere.
