--- a/SailScores.Web/Views/ClubRequest/RequestAccountAndClub.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestAccountAndClub.cshtml
@@ -15,6 +15,8 @@
         </p>
         <p>
             SailScores is donated to the sailing community. Use it for free.
+            If you’d like to help keep it running and improving, visit the
+            <a asp-controller="Supporter" asp-action="Index">Supporter page</a>.
         </p>
         <br />
     </div>
@@ -163,7 +165,7 @@
             <em>
                 Inactive clubs will be archived and removed from the site
                 periodically. A club is considered inactive if it hasn't had
-                any activity in a year or the initial setup isn't completed
+                any activity in a year or the initial setup hasn't been completed
                 within 2 months.
             </em>
         </p>
