--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -44,7 +44,7 @@
     </p>
     <p>
         To learn more about Supporter benefits, visit the
-        <a href="/pricing">Pricing</a> page.
+            <a asp-controller="Supporter" asp-action="Index">Pricing</a> page.
     </p>
 
     <br />
