--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -113,7 +113,7 @@
         <p><em>
             Inactive clubs will be archived and removed from the site
             periodically. A club is considered inactive if it hasn't had
-            any activity in a year or the initial setup isn't completed
+            any activity in a year or the initial setup hasn't been completed
             within 2 months.
         </em></p>
     </div>
