WIP on competitor places report

--- a/SailScores.Web/Views/Reports/Index.cshtml
+++ b/SailScores.Web/Views/Reports/Index.cshtml
@@ -43,19 +43,6 @@
             </div>
         </div>
 
-        <div class="col-md-4 mb-3">
-            <div class="h-100">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a href="~/@Model.ClubInitials/Reports/CompetitorStats" class="text-decoration-none">Competitor Statistics</a>
-                    </h5>
-                    <p class="card-text">
-                        Summary stats for competitors including races participated,
-                        boats beat, and participation by boat class and season.
-                    </p>
-                </div>
-            </div>
-        </div>
 
         <div class="col-md-4 mb-3">
             <div class="h-100">
@@ -79,6 +66,34 @@
                     </h5>
                     <p class="card-text">
                         General statistics about the club including competitors, races, and starts per season.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+            <div class="h-100">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="~/@Model.ClubInitials/Reports/CompetitorStats" class="text-decoration-none">Competitor Summaries</a>
+                    </h5>
+                    <p class="card-text">
+                        Summary stats for competitors including races participated,
+                        boats beat, and participation by boat class and season.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+            <div class="h-100">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="~/@Model.ClubInitials/Reports/AllCompPlaces" class="text-decoration-none">Competitor Places</a>
+                    </h5>
+                    <p class="card-text">
+                        More detailed than Competitor Summary. Counts by competitor,
+                        season, and day/race aggregation for score codes and finishing places.
                     </p>
                 </div>
             </div>
